fix safari main menu overflow

--- a/src/styles/MainMenu.scss
+++ b/src/styles/MainMenu.scss
@@ -50,9 +50,8 @@
 
       &:last-child {
         grid-column: 1 / 3;
-        margin-inline: calc(50% + .3em);
+        place-self: center;
         width: 50%;
-        transform: translateX(-50%);
       }
 
       & {
